--- a/BSUIREntrantsWebSite/BSUIREntrantsWebSite/Views/Home/Contact.cshtml
+++ b/BSUIREntrantsWebSite/BSUIREntrantsWebSite/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    One BSUIR Way<br />
+    Dzerzhinskogo, 95, 801a<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    +375291258419
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:kseniya.borokhovskaya@gmail.com">kseniya.borokhovskaya@gmail.com</a><br />
 </address>
