--- a/BSUIREntrantsWebSite/BSUIREntrantsWebSite/Views/UniversityTree/Index.cshtml
+++ b/BSUIREntrantsWebSite/BSUIREntrantsWebSite/Views/UniversityTree/Index.cshtml
@@ -2,21 +2,15 @@
     ViewBag.Title = "Tree";
 }
 <html>
-<head>
-    @*<link rel="stylesheet" href="~/Content/jsTree/themes/default/style.min.css" />
-      <script src="~/Scripts/jquery-1.12.1.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>*@   
-</head>
-<body>
-    <script>
-        $(function () {
-            console.log("eeeeeeee");
-            $('#container').jstree({
+    <body>
+        <script>
+         $(function () {
+            $('#treeView').jstree({
                 "plugins": ["search", "wholerow"],
                 'core': {
+                    'themes': { "icons": false },
                     'data': {
                         'url': function (node) {
-                            console.log("I'm here");
                             return node.id === '#' ? "/UniversityTree/GetRoot" : "/UniversityTree/GetChildren/" + node.id;
                         },
                         'data': function (node) {
@@ -26,14 +20,14 @@
                 }
             });
 
-            $('#container').on('changed.jstree', function (e, data) {
+            $('#treeView').on('changed.jstree', function (e, data) {
                 console.log("=> selected node: " + data.node.id);
             });
-        });
-    </script>
+         });
+        </script>
 
-    <div id="container"></div>
-</body>
+        <div id="treeView"></div>
+    </body>
 </html>
 
 
